--- a/css/media.css
+++ b/css/media.css
@@ -28,6 +28,10 @@
 		line-height: 17px;
 		padding: 10px 28px;
 	}
+
+	.ts__wrapper {
+	    max-width: 1010px;
+	}
 	
 	.ts__right__phone {
 		max-width: 297px;
@@ -41,6 +45,30 @@
 		max-width: 108px;
 		right: -50px;
 	}
+
+	img.person.ts__1 {
+		max-width: 440px;
+		top: -47px;
+		right: 0;
+	}
+	
+	img.person.ts__2 {
+		max-width: 460px;
+		top: -47px;
+		right: 0;
+	}
+	
+	img.person.ts__3 {
+		max-width: 442px;
+		top: -47px;
+		right: 0;
+	}
+	
+	img.person.ts__4 {
+		max-width: 443px;
+		top: -47px;
+		right: 0;
+	}
 	
 	.ts__right__person img {
 		width: 100%;
@@ -50,6 +78,7 @@
 		font-weight: 700;
 		font-size: 39px;
 		line-height: 115.7%;
+		max-width: 572px;
 	}
 	
 	.ts__item__text {
@@ -57,6 +86,7 @@
 		font-size: 21px;
 		line-height: 27px;
 		margin-top: 15px;
+		max-width: 572px;
 	}
 	
 	.slick-dots {
