--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,8 @@ header.header {
     display: flex;
     justify-content: center;
     padding: 18px 120px;
+    z-index: 99;
+    background: #fff;
 }
 
 .header__wrapper {
@@ -127,6 +129,7 @@ nav.top__nav {
 
 .top__li {
     list-style: none;
+    /* position: relative; */
 }
 
 .top__link {
@@ -142,6 +145,22 @@ nav.top__nav {
 
 .top__link:hover {
     text-decoration: none;
+    color: #0DA7E2;
+}
+
+.nav__arrow {
+    width: 8px;
+    height: 8px;
+    margin-left: 4px;
+    background: url(../img/nav__arrow.svg) no-repeat center center;
+    transition: all .5s ease;
+}
+
+.top__link.active .nav__arrow {
+    background: url(../img/nav__arrow__color.svg) no-repeat center center;
+}
+
+.top__link.active {
     color: #0DA7E2;
 }
 
@@ -821,9 +840,15 @@ footer.footer {
     color: #0DA7E2
 }
 
+.footer__link:active,
+.footer__link:focus {
+    color: #fff;
+}
+
 .footer__nav li {
     list-style: none;
     margin-right: 50px;
+    margin-bottom: 6px;
 }
 
 ul {
@@ -840,6 +865,43 @@ ul {
 
 .footer__nav ul {
     padding: 0;
+}
+
+.footer__submenu {
+    position: absolute;
+    display: flex;
+    max-width: 180px;
+    margin-top: 9px;
+	display: none;
+	opacity: 0;
+	transition: all .5s ease;
+}
+
+.footer__submenu ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.sub__main {
+	background: url(../img/arrow__open.svg) no-repeat 100% center;
+	padding-right: 16px;
+	transition: all .5s ease;
+}
+
+.sub__main.active {
+	background: url(../img/arrow__close.svg) no-repeat 100% center;
+	padding-right: 16px;
+	transition: all .5s ease;
+}
+
+a.f__sublink {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+/* identical to box height */
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
 }
 
 .vk {
@@ -922,9 +984,9 @@ ul {
     display: none;
     justify-content: center;
     align-items: center;
-    z-index: 9;
-	opacity: 0;
-	transition: all .5s ease;
+    z-index: 999;
+    opacity: 0;
+    transition: all .5s ease;
 }
 
 .qr__overlay {
@@ -1007,4 +1069,63 @@ ul {
 
 .qr__close:hover {
     transform: rotate(180deg)
+}
+
+.submenu {
+    position: absolute;
+    display: none;
+    background: #FFFFFF;
+    box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.1), -4px 4px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 0px 0px 20px 20px;
+    padding: 28px 24px 18px 24px;
+    top: 79px;
+    z-index: 9;
+    margin-left: -24px;
+	opacity: 0;
+	transition: all .5s ease;
+}
+
+.top__link.active > .submenu {
+	display: flex;
+	opacity: 1;
+}
+
+ul.sub__menu {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+}
+
+.sub__menu li {
+    list-style: none;
+}
+
+a.sub__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+/* identical to box height */
+    display: flex;
+    align-items: center;
+    color: #000000;
+    margin-bottom: 10px;
+    transition: all .5s ease;
+    text-decoration: none;
+    /* border-bottom: 1px solid; */
+}
+
+a.sub__link:hover {
+    text-decoration: underline;
+}
+
+.full__overlay {
+	width: 100vw;
+	height: 100vh;
+	background: #000;
+	opacity: 0;
+	position: fixed;
+	display: none;
+	transition: all .5s ease;
+	z-index: 9;
 }
