--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ html.js .loader {
 	right: 0;
 	top: 0;
 	width: 100%;
-	z-index: 9999;
+	z-index: 9999999;
 }
 html.js .loader_inner {
 	background-image: url("../img/circle.svg");
